--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^2.0.22",
     "react-modal": "^3.16.3",
+    "react-toastify": "^11.0.5",
     "sslcommerz": "^1.7.0",
     "sslcommerz-lts": "^1.1.0",
     "xss-clean": "^0.1.4"
